fix(auth): harden public registration